Add all 'send_all' methods for bytes, json, etc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ edition = "2018"
 
 
 [dependencies]
+http-types = "2.11"
+futures = "0.3"
+serde = "1.0"
 tide-websockets = "0.4"
 uuid = { version = "0.8", features = ["v4"] }
 
-async-lock = { version = "2.3", optional = true }
-tokio = { version = "1.7", features = ["sync"], optional = true}
+async-lock = "2.3"
+async-std = "1.9"
 
-[features]
-async-std = ["async-lock"]
+[dev-dependencies]
+tide = "0.16"
+async-std = { version = "1.9", features = ["attributes"] }
