Add Licenses, Readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "tide-websockets-ext"
 version = "0.1.0"
 edition = "2018"
-
+license = "Apache 2.0 or MIT"
+readme = "README.md"
 
 [dependencies]
 async-std = "1.9"
