Fix license metadata in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tide-websockets-ext"
 version = "0.1.0"
 edition = "2018"
-license = "Apache 2.0 or MIT"
+license = "MIT OR Apache-2.0"
 authors = [
     "Boyd Johnson johnson.boyd@gmail.com"
 ]
